--- a/roles/codius-host/tasks/main.yml
+++ b/roles/codius-host/tasks/main.yml
@@ -26,3 +26,10 @@
   shell: sudo /etc/init.d/dnsmasq restart
 - name: start
   shell: nohup node app.js & chdir=/home/ubuntu/codius_host
+- name: nginx
+  apt: name=nginx state=present
+- name: upstart script
+  copy: src=upstart.conf dest=/etc/init/codius-host.conf
+- name: nginx configuration
+  copy: src=nginx.conf dest=/etc/nginx/sites-available/default
+  notify: restart nginx
